@@ -2740,3 +2740,7 @@ statusbar.task-monitor.tooltip=Click to see running tasks dockable
 statusbar.task-monitor.sample=7 task(s)
 statusbar.task-monitor.template={0} task(s)
 #}}}
+
+killring.load-memoryerror.message=Unable to load previously deleted text. Please increase your memory heap space.\
+  Press Yes to start jEdit anyway, or No to stop and change your settings.
+killring.load-memoryerror.title=Memory error
