@@ -11,6 +11,9 @@ Evan Wright, Shlomy Reinstein, glen117, Marcelo Vanzin and Eric Le Lay,
 Jason Gardner for contributing to this release.
 
 {{{ Bug fixes
+- Fixed jEdit starting when max heap size is too low to load Killring
+  (#1827853) (Matthieu Casanova
+
 - Fixed NPE when starting jEdit with nosettings (#3401814) (Matthieu Casanova)
 
 - Fix Checkbox Menu not working on OSX (#3155813 patch #3159277) (Evan Wright)
